# Privateintent

./: .env.example  .gitignore  LOCAL_SETUP.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  push-schema.mjs  verify-env.mjs
.agents/: agent_assets_metadata.toml
artifacts/api-server/: build.mjs  close_buffer.mjs  deploy_bpf2.mjs  deploy_final.mjs  package.json  release_intent15.mjs  tsconfig.json
artifacts/api-server/scripts/: deployEscrow.mjs
artifacts/api-server/src/: declarations.d.ts  index.ts  seed.ts
artifacts/escrow-contract/: hardhat.config.js  package.json
artifacts/escrow-contract/contracts/: PrivateIntentEscrow.sol
artifacts/escrow-contract/scripts/: compile.js  deploy-simple.js  deploy.js
artifacts/mockup-sandbox/: vite.config.ts
artifacts/mockup-sandbox/.replit-artifact/: artifact.toml
artifacts/pitch-deck/: index.html  vite.config.ts
artifacts/pitch-deck/.replit-artifact/: artifact.toml
artifacts/pitch-deck/src/: index.css
artifacts/prism-dwallet-web/: index.html  package.json  vite.config.ts
artifacts/prism-dwallet-web/.replit-artifact/: artifact.toml
artifacts/prism-dwallet-web/public/: ext-content.js  ext-manifest.json  ext-popup.css  ext-popup.html  ext-preview.html  robots.txt  sitemap.xml
artifacts/prism-dwallet-web/src/: App.tsx  (+1 more)
artifacts/sol-escrow/: Anchor.toml
artifacts/sol-escrow/programs/private_intent_escrow/: Cargo.toml
artifacts/sol-escrow/programs/private_intent_escrow/src/: lib.rs
lib/api-spec/: openapi.yaml
lib/db/: push-schema.mjs
scripts/: post-merge.sh
(+63 files in other folders)
