[package]
name = "private_intent_escrow"
version = "0.1.0"
description = "PrismDwallet — SOL escrow program (native, Anchor-wire-compatible)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "private_intent_escrow"

[features]
no-entrypoint = []
default = []

[dependencies]
solana-program = "=1.18.26"
